# marcconv

./: .gitignore  CMakeLists.txt  amuopt.c  amuopt.h  custombib.c  istrstr.c  istrstr.h  marc.h  marc_mem.c  marcaddf.c  marcadds.c  marccoll.c  marcconv.c  marcconv.h  marccpyf.c  marccur.c  marcdefs.h  marcdelf.c  marcdels.c  marcdup.c  marcfree.c  marcgetf.c  marcgeti.c  marcgetr.c  marcgets.c  marcindc.c  marcinit.c  marcnew.c  marcnxtf.c  marcnxti.c  marcnxts.c  marcoksf.c  marcold.c  marcordf.c  marcords.c  marcposf.c  marcposs.c  marcproc.c  marcproclist.c  marcproclist.h  (+16 more)
